--- a/archi.html
+++ b/archi.html
@@ -60,8 +60,12 @@
 
           </div>
           <!--  PHRASE-->
-          <div class="container-fluid">
-            <p><em>Musings of technology. Ponderings of Design.</em></p>
+          <div class="container">
+            <p><em>
+
+              A Digital/Graphic Designer.
+              <br>A Creative HTML Developer.
+            </em></p>
           </div>
           <!-- <hr width="97%"> -->
           <!--  NAVIGATION -->
@@ -69,6 +73,8 @@
             <ul class="list-inline" style="margin-bottom: 5px">
               <li><a class="link" id="nav" href="about.html">About</a></li>
               <li><a class="link" id="nav" href="index.html">Works</a></li>
+              <li><a class="link" id="nav" href="grphic_index.html">Graphic Design</a></li>
+              <li><a class="link" id="nav" href="coding_index.html">Coding Design</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
