--- a/digi.html
+++ b/digi.html
@@ -97,7 +97,7 @@
 
             <!-- project image -->
             <div class="image">
-              <a href=""><img src="image/dian_03.png" class="img-responsive img-circle"></a>
+              <a href=""><img src="image/digi.gif" class="img-responsive img-circle"></a>
             </div>
             <!-- date description -->
             <p id="left-bar" style="font-family: 'Open Sans';">
