--- a/grphic_index.html
+++ b/grphic_index.html
@@ -60,10 +60,10 @@ He will take great delight in you;
       <!--  HEADER -->
       <div class="container header" style="padding-top: 30px">
         <!--  TITLE BOX-->
-        <div class="row animated bounceInLeft" style="float:left; width: 325px">
+        <div class="row" style="float:left; width: 325px">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:280px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun.</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Graphic Byun.</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -97,7 +97,7 @@ He will take great delight in you;
 
         </div> <!-- END OF TITLE BOX ROW -->
         <div style="float:right;position:relative">
-          <ul class="soc animated bounceInLeft">
+          <ul class="soc">
               <!-- <li><a class="soc-email2" href="mailto:byunkaram@gmail.com"></a></li> -->
               <li><a class="soc-linkedin" href="http://www.linkedin.com/in/karambyun"></a></li>
               <li><a class="soc-twitter" href="https://twitter.com/crzikrn/media"></a></li>
@@ -112,33 +112,17 @@ He will take great delight in you;
         <!--  ARTICLE STYLED PORTFOLIO -->
 
           <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xs-12 wow animated bounceInLeft" data-wow-delay="0.05s">
+
+          <!--  NEWS STRIP 1 -->
+          <div class="col-sm-3 col-md-4 col-lg-4 col-xs-12 wow animated bounceInLeft" data-wow-delay="0.05s">
               <!-- category title -->
               <div class="category title">
-                <h4></h4>
-
-                <h2>Hi, I'm Karam Byun. <br>
-                  A Digital/Graphic Designer and
-                  a creative HTML Developer based in New York.
-                  <br>-<br><br>
-                  Professionally, I craft experiences of brands/campaigns for the web and print.
-                  <br><br>
-                  Creatively, I muse with technology and its interactions within sociology.
-
-                  <br>-<br></h3>
-              </div>
-            </div>
-
-            <!--  NEWS STRIP 1 -->
-            <div class="col-sm-3 col-md-5 col-lg-5 col-xs-12 wow animated bounceInLeft" data-wow-delay="0.05s">
-              <!-- category title -->
-              <div class="category title">
-                <h4>MEDIA DESIGNER</h4>
+                <h4>DIGITAL/PRINT</h4>
                 <hr>
                 <h3></h3>
               </div>
               <!-- ONE -->
-              <div  >
+
               <!-- project title -->
 
                 <!-- project image -->
@@ -148,117 +132,132 @@ He will take great delight in you;
                 <!-- project description -->
                 <h5><em><a class="link" href="typo.html">DIGITAL/GRAPHIC DESIGN</a></em></h5>
                 <h6>DATA VISUALIZATION, LAYOUT DESIGN, LOGO, SLIDES </h6>
-                <p>
-                  Digital/Graphic Design projects for different media platforms.
-                  Includes Branding, Logo, Publishing, Layouts, Data Visualizations, App Icons, Poster and Typography.
-                  <span id="more"><a href="typo.html">More>></a></span>
-                </p>
+                <p>Personal typography projects over the years for different media platforms. Branding, Books, Posters, Slides. <br><span id="more"><a href="typo.html">More>></a></span></p>
+                <div class="more button">
 
-                <!-- break -->
                 </div>
+                <!-- break -->
+                <br>
 
-                <!-- ONE -->
+                <!-- THREE -->
+                <div >
                 <!-- project title -->
 
-                <!-- project image -->
-                <div class="image">
-                  <a href="http://crzikrn.github.io/dontpunish"><img src="image/web_01.png" class="img-responsive img-circle"></a>
-                  <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+                  <!-- project image -->
+                  <div class="image">
+                    <a href="archi.html"><img src="image/graf_00.jpg" class="img-responsive img-circle"></a>
+                  </div>
+                  <!-- description -->
+                  <h5><em><a class="link" href="archi.html"> ARCHITECTURAL GRAFFITI</a></em></h5>
+                  <h6>3D CAMERA, PROCESSING, CREATIVE CODING, GRAPHIC DESIGN</h6>
+                  <p>Using graffiti as a brush to simulate analog architectural drawings. Using 3D camera movement to simulate pencil-drawn parametric design. <span id="more"><a href="archi.html">More>></a></span></p>
+                  <!-- button -->
+                  <div class="more button"></div>
                 </div>
-                <!-- description -->
-                <h5><em><a class="link" href="http://crzikrn.github.io/dontpunish">ONE-PAGE HTML WEBSITE</a></em></h5>
-                <h6>FRONT-END, HTML, CSS, JAVASCRIPT, CAMPAIGN</h6>
-                <p>One-Page web prototype campaign for <em>Support. Don't Punish.</em>, a global advocacy campaign.
-                  It's an HTML page with jQuery plugins and javascript libraries for animation. And pure javascript for the timer clocks.
-                  <span id="more"><a href="http://crzikrn.github.io/dontpunish">
-                    More>></a></span> </p>
-                <!-- button -->
-                <div class="more button"></div>
-                <!-- break -->
 
-            </div> <!-- END OF NEWS STRIP 1--->
+
+            </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-6 wow animated bounceInLeft" data-wow-delay="0.1s">
+          <div class="col-sm-3 col-md-4 col-lg-4 col-xs-12 wow animated bounceInLeft" data-wow-delay="0.1s">
             <!-- category title -->
             <div class="category title">
-              <h4>CREATIVE CODER</h4>
-              <hr>
-              <h3></h3>
-            </div>
-
-            <!-- TWO -->
-            <div class="">
-            <!-- project title -->
-
-              <!-- project image -->
-              <div class="image">
-              <a href="hamlet.html"><img src="image/hamlet_00.png" class="img-responsive img-circle"></a>
-                <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
-              </div>
-              <!-- description -->
-              <h5><em><a class="link" href="hamlet.html">SHAKESPEARE, DATA ART</a></em></h5>
-              <h6>DATA VISUALIZATION, JAVASCRIPT, TEXT ANALYSIS</h6>
-              <p>Data Art by text analysis.
-                The data art re-created is Shakepeare's own use of spatial typography between words.
-                <span id="more"><a href="hamlet.html"> More>></a></span></p>
-
-              <div class="more button"></div>
-            </div>
-
-            <!-- TWO -->
-            <div >
-            <!-- project title -->
-
-              <!-- http://gph.is/1VEvHNQ -->
-              <!-- project image -->
-
-              <div class="image" id="img">
-                <a href="digi.html"><img src="image/digi.gif" class="img-responsive img-circle"></a>
-              </div>
-              <!-- description -->
-              <h5><em><a class="link" href="digi.html">REPRESENTATIONS OF US</a></em></h5>
-              <h6>OPENCV, FACE DETECTION, PROCESSING, CREATIVE CODING</h6>
-              <p>The juxtaposition of analog and digital expressions on a digital canvas. Usage of facedetection and pixel brightness to simulate expressionism. <span id="more"><a href="digi.html">More>></a></span></p>
-              <!-- button -->
-              <div class="more button"></div>
-              <!-- break -->
-              <br>
-
-            </div>
-
-          </div> <!-- END OF NEWS STRIP 2--->
-
-          <!--  NEWS STRIP 3 -->
-          <div class="col-sm-3 col-md-3 col-lg-3 col-xs-6 wow animated bounceInLeft" data-wow-delay="0.2s" >
-            <!-- category title -->
-            <div class="category title">
-              <h4>RESEARCH ARTIST</h4>
+              <h4>WEB UI</h4>
               <hr>
               <h3></h3>
             </div>
 
             <!-- ONE -->
-            <div class="">
-              <!-- project title -->
+            <!-- project title -->
 
-              <!-- project image -->
-              <div class="image">
-                <a href="videolab.html"><img src="image/lab_00.png" class="img-responsive img-circle "></a>
-                <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
-              </div>
-              <!-- description -->
-              <h5><em><a class="link" href="videolab.html">MEDIA CODING LAB</a></em></h5>
-              <h6>KINECT, ARDUINO, MOTION GRAPHICS, VIDEO EDITING</h6>
-              <p>Collection of video uploads in coding and physical computing experiment tests, motion graphics, and media design.
-                 <span id="more"><a href="videolab.html"> More>></a></span></p>
-              <!-- button -->
-              <div class="more button"></div>
-              <!-- break -->
+            <!-- project image -->
+            <div class="image">
+              <a href="http://crzikrn.github.io/dontpunish"><img src="image/web_01.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
             </div>
+            <!-- description -->
+            <h5><em><a class="link" href="http://crzikrn.github.io/dontpunish">DON'T SUPPORT</a></em></h5>
+            <h6>FRONT-END, HTML, CSS, JAVASCRIPT, CAMPAIGN</h6>
+            <p>Single Website Promotion for the public. A campaign for Don't Support Punish, with Clock Counters for datasets.
+              <span id="more"><a href="http://crzikrn.github.io/dontpunish">
+                More>></a></span> </p>
+            <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+
+            <!-- TWO -->
+            <!-- project title -->
+
+            <!-- project image -->
+            <div class="image">
+              <a href="image/web_cw_03.png"><img src="image/web_cw_03.png" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
+            </div>
+            <!-- description -->
+            <h5><em><a class="link" href="">WEB DESIGN</a></em></h5>
+            <h6>FRONT-END, HTML, CSS, JAVASCRIPT, WEB-DESIGN</h6>
+            <p>Freelance web designs for clients
+              <span id="more"><a href="">
+                More>></a></span> </p>
+            <!-- button -->
+            <div class="more button"></div>
+            <!-- break -->
+            <br>
+
+
+
+          </div>
+
+          <!--  NEWS STRIP 3-->
+          <div class="col-sm-3 col-md-4 col-lg-4 col-xs-12 wow animated bounceInLeft" data-wow-delay="0.15s">
+            <!-- category title -->
+            <div class="category title">
+              <h4>MEDIA ART</h4>
+              <hr>
+              <h3></h3>
+            </div>
+
+            <!-- ONE -->
+            <!-- project title -->
+
+            <!-- project image -->
+            <div class="image">
+              <a href="divine.html"><img src="image/mapp_00.jpg" class="img-responsive img-circle"></a>
+            </div>
+            <!-- project description -->
+            <h5><em><a class="link" href="divine.html">MEDIA ART ON THE DIVINE</a></em></h5>
+            <h6>PROJECTION MAPPING, NEW MEDIA, ARCHITECTURAL SKETCHES </h6>
+            <p>Projection Mapping on a Religious Object; re-creating the death on cross and overlaying study sketches of the object. <span id="more"><a href="divine.html">More>></a></span></p>
+            <div class="more button"></div>
           </div> <!-- END OF NEWS STRIP 3--->
 
+          <!--  NEWS STRIP 4 -->
+          <div class="col-sm-3 hidden-md hidden-lg col-xs-12 wow animated bounceInLeft" data-wow-delay="0.2s" >
+            <!-- category title -->
+            <div class="category title">
+              <h4>BRAINSTORMING</h4>
+              <hr>
+              <h3></h3>
+            </div>
 
+            <!-- ONE -->
+            <!-- project title -->
+
+            <!-- project image -->
+            <div class="image">
+              <a href="sketches.html"><img src="image/sketch_des_05.jpg" class="img-responsive img-circle"></a>
+              <!-- <a href=""><img src="image/carni_01.png" class="img-responsive img-circle"></a> -->
+            </div>
+            <!-- description -->
+            <h5><em><a class="link" href="sketches.html">SKETCHES</a></em></h5>
+            <h6>UI SKETCH, BRAINSTORMING</h6>
+            <p>Design sketch iterations and ideas sketches on notebooks. <span id="more"><a href="sketches.html">More>></a></span></p>
+            <!-- button -->
+            <div class="more button">
+            </div>
+
+          </div> <!-- END OF NEWS STRIP 4--->
 
         </div> <!--  END OF PORTFOLIO ROW-->
       </div> <!--  END OF CONTENT MAIN PART -->
