--- a/hamlet.html
+++ b/hamlet.html
@@ -67,8 +67,8 @@
         <!--  TITLE BOX-->
         <div class="row">
           <!--  TITLE NAME -->
-          <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
+          <div class="container" style="float:left; width:280px">
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -79,8 +79,12 @@
 
           </div>
           <!--  PHRASE-->
-          <div class="container-fluid">
-            <p><em>Musings of technology. Ponderings of Design.</em></p>
+          <div class="container">
+            <p><em>
+
+              A Digital/Graphic Designer.
+              <br>A Creative HTML Developer.
+            </em></p>
           </div>
           <!-- <hr width="97%"> -->
           <!--  NAVIGATION -->
@@ -88,6 +92,8 @@
             <ul class="list-inline" style="margin-bottom: 5px">
               <li><a class="link" id="nav" href="about.html">About</a></li>
               <li><a class="link" id="nav" href="index.html">Works</a></li>
+              <li><a class="link" id="nav" href="grphic_index.html">Graphic Design</a></li>
+              <li><a class="link" id="nav" href="coding_index.html">Coding Design</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
@@ -131,7 +137,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInLeft">
             <!-- category title -->
             <div class="category title">
               <h4>SHAKESPEARE'S CREATIVITY, TEXT ANALYSIS</h4>
@@ -150,21 +156,21 @@
                 This is about immortality in the sense we admire those who linger on even after death.
                 Shakespeare's creativity has long lived passed his days.
                 And how was it able to survive?
-                This is not only about understanding creativity of Shakespeare through the words he uses
-                ,but also about what creates immortality.
+                This is not only about understanding creativity of Shakespeare through the words he uses,
+                but also about what creates immortality.
               </p>
               <p>
-                Featured on the right and on the bottom is a interactive data graph of Shakespeare's Hamlet text analysis.
-                The height( or width in the canvas) of the image is the lenght of the book from beginning to end.
+                Featured on the right and on the bottom is an interactive data art of Shakespeare's Hamlet text analysis.
+                The height( or width in the canvas) of the image is the length of the book from beginning to end.
                 These are page numbers of the book where the top is page 1, and the bottom the last page.
-                The lcoation of ellipses are words detected for the first time in the book.
+                The location of ellipses are words detected for the first time in the book.
                 The size of the ellipses are the concordance data, meaning the frequency of the word.
                 It correlates to the number of times the word has appeared throughout the story.
                 And finally the colors depict a ranking system I created for the detected words.
                 <br><br>
-                Plainly speaking, I was counting number of words appearing in the text.
-                And soon I found out that He had 3 categories.
-                Low-Range, Mid-Range, High-Range.
+                Plainly speaking, I was counting the number of words appearing in the text.
+                And soon I found out that it had 3 categories:
+                <em>Low-Range, Mid-Range, High-Range.</em>
                 <br><br>
                 High-Range word occurence were prepositions like <em>the, a, on, and, as, so, in, of</em> and so on.
                 All these common words appeared in the beginning of the book.
