--- a/typo.html
+++ b/typo.html
@@ -50,7 +50,7 @@
         <div class="row">
           <!--  TITLE NAME -->
           <div class="container" style="float:left; width:240px">
-            <h1 style="margin-bottom:0px"><a id="title" href="index.html">BYUNNNN</a></h1>
+            <h1 style="margin-bottom:0px"><a id="title" href="index.html">Karam Byun.</a></h1>
           </div>
           <!--  LOGO IMAGE-->
           <div class="container" >
@@ -61,8 +61,11 @@
 
           </div>
           <!--  PHRASE-->
-          <div class="container-fluid">
-            <p><em>Musings of technology. Ponderings of Design.</em></p>
+          <div class="container">
+            <p><em>
+              A Digital/Graphic Designer.
+              <br>A Creative HTML Developer.
+            </em></p>
           </div>
           <!-- <hr width="97%"> -->
           <!--  NAVIGATION -->
@@ -70,6 +73,8 @@
             <ul class="list-inline" style="margin-bottom: 5px">
               <li><a class="link" id="nav" href="about.html">About</a></li>
               <li><a class="link" id="nav" href="index.html">Works</a></li>
+              <li><a class="link" id="nav" href="grphic_index.html">Graphic Design</a></li>
+              <li><a class="link" id="nav" href="coding_index.html">Coding Design</a></li>
               <li><a class="link" id="nav"  href="http://byunnnn.com/blog">Blog</a></li>
               <!-- <li><a class="link" id="nav" href="">Contact</a></li> -->
             </ul>
@@ -114,7 +119,7 @@
           </div>
 
           <!--  NEWS STRIP 2-->
-          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInRight">
+          <div class="col-sm-9 col-md-9 col-lg-9 col-xs-12 animated bounceInLeft">
             <!-- category title -->
             <div class="category title">
               <h4>TYPOGRAPHY</h4>
