--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ He will take great delight in you;
 
               <!-- project image -->
               <div class="image">
-                <a href="videolab.html"><img src="image/lab_00.png" class="img-responsive img-circle "></a>
+                <a href="videolab.html"><img src="image/kinect.gif" class="img-responsive img-circle "></a>
                 <!-- <a href=""><img src="image/data_01.png" class="img-responsive"></a> -->
               </div>
               <!-- description -->
