--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ He will take great delight in you;
         <!--  ARTICLE STYLED PORTFOLIO -->
 
           <div class="row">
-            <div class="col-sm-12 col-md-4 col-lg-4 col-xs-12 wow animated bounceInLeft" data-wow-delay="0.05s">
+            <div class="col-sm-12 col-md-4 col-lg-4 col-xs-12 wow animated bounceInLeft">
               <!-- category title -->
               <div class="category title">
                 <h4></h4>
